gitops/app/prod/manifests/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-prod
  namespace: prod
spec:
  replicas: 3 # Chạy nhiều replicas để chịu tải thật
  selector:
    matchLabels:
      app: my-app-prod
  template:
    metadata:
      labels:
        app: my-app-prod
    spec:
      containers:
      - name: my-app
        image: ghcr.io/thuanthentran/dqn-lstm-agent-driven-canary-release/my-app:3e8cf2a
        ports:
        - containerPort: 8080
