gitops/app/prod/manifests/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-prod-svc
  namespace: prod
spec:
  selector:
    app: my-app-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
