gitops/app/prod/manifests/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-prod-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    # 1. Kích hoạt tính năng Mirror
    nginx.ingress.kubernetes.io/mirror-target: "/mirror-to-twin"
    
    # 2. Server Snippet: Hứng traffic mirror và bắn ngược lại Ingress của Twin
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /mirror-to-twin {
          internal;
          # Đánh tráo Host Header thành host của cụm Twin (my-app.local)
          proxy_set_header Host my-app.local;
          
          # Bắn ngược lại cổng 80 của chính con NGINX Controller này (Loopback)
          # Lúc này NGINX sẽ tưởng đây là request của khách gửi đến Twin
          # và nó sẽ áp dụng luật Traffic Split (Canary Weight) của Argo Rollouts!
          proxy_pass http://127.0.0.1:80$request_uri;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: prod.my-app.local # <--- Khách hàng thật sẽ truy cập vào Domain này
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-prod-svc
            port:
              number: 80
